2008-03-06  Shai Ayal  <shaiay@users.sourceforge.net>

	* fltk_backend/fltk_backend.cc (plot_window::handle): Add handling
	of the 'a' and 'g' keys
	(plot_window: toggle_grid): New helper function
	(plot_window): Add new togglegrid button

2008-03-01  Shai Ayal  <shaiay@users.sourceforge.net>

	* fltk_backend/fltk_backend.cc (OpenGL_fltk::draw_overlay,
	OpenGL_fltk::zoom, OpenGL_fltk::set_zoom_box): Added to support
	zoom box
	(plot_window::handle): Added zoom box code, B-3 now does autoscale
	(plot_window::axis_auto): New utility function to call axis("auto")
	(plot_window::button_press): "A" button now does autoscale

	* opengl/gl-render.cc (make_marker_list): Add the "+x*.^v><"
	markers

2008-02-27  Michael Goffioul  <michael.goffioul@gmail.com>

	* opengl/gl-render.cc (opengl_renderer::draw(patch),
	opengl_renderer::draw(surface)): Adapt to type change of facealpha and
	edgealpha, using double_radio_property class.

2008-02-26  Michael Goffioul  <michael.goffioul@gmail.com>

	* opengl/gl-render.h: Make sure windows.h is included before OpenGL
	headers.
	* fltk_backend/Makefile.in (FLTK_EXTRA_CXXFLAGS): Use $(srcdir) for
	includesion of OpenGL renderer headers.
	(Makeconf): Move inclusion of Makeconf later on, to avoid freezing
	MinGW make.

	* fltk_backend/Makefile.in (GRAPHICS_CFLAGS): New substituted
	variable.

2008-02-25  Shai Ayal  <shaiay@users.sourceforge.net>

	* fltk_backend/fltk_backend.cc (class plot_window): Many changes
	to use figure::properties instead of figure handle to reference
	the figure
	(class figure_manager): ditto
	(__fltk_redraw__): moved most of functionality into the
	figure_manager class
	(plot_window::pixel2pos): Modified to use axes::pixel2coord
	(plot_window::pixel2staus): Modified to use pixel2pos
	(plot_window::handle): Added zoom with mouse 

2008-02-24  Shai Ayal  <shaiay@users.sourceforge.net>

	* fltk_backend/fltk_backend.cc (OpenGL_fltk::Draw): removed double
	buffer switch